[package]
name = "replace_text"
version = "0.1.0"
authors = ["Alkhanm <joas7777777@hotmail.com>"]
description = "Ferramenta para alterar textos"
homepage = "https://github.com/Alkhanm/renomear-arquivos"
repository = "https://github.com/Alkhanm/renomear-arquivos"
keywords = ["cli", "files", "directories"]
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
clap = "2"
